--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leveldown": "^1.6.0",
     "levelup": "^1.3.5",
     "moment": "^2.17.1",
+    "mongoose": "^5.1.5",
     "morgan": "~1.9.0",
     "numeral": "^2.0.6",
     "pug": "~2.0.0-beta10",
